recettes et newsletter improvement

--- a/app/Resources/views/includes/footer.html.twig
+++ b/app/Resources/views/includes/footer.html.twig
@@ -121,7 +121,7 @@
 			<br/>
 
 			<div class="row" id="newsletterForm">
-				<form method="post" action="{{ path('lbf_main_newsletterEmail', {'path': app.request.attributes.get( '_route' )}) }}" >
+				<form method="post" action="{{ path('lbf_main_newsletterEmail') }}" >
 					<div class="row">
 
 		                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
