--- a/src/LBF/AdminBundle/Resources/views/Admin/newMember.html.twig
+++ b/src/LBF/AdminBundle/Resources/views/Admin/newMember.html.twig
@@ -63,7 +63,7 @@
 							                {% endif %}
 											<div class="input-icon">
 									        	{% set name = {'attr': {'class': 'form-control placeholder-no-fix',
-									        		'type':'text', 'placeholder':'Titre de la page', 'id':'name'}} %}
+									        		'type':'text', 'placeholder':'Nom du membre', 'id':'name'}} %}
 									        	{{ form_widget(formMember.name, name) }}
 									        </div>
 										</div>
